--- a/src/pages/now/Homechart.css
+++ b/src/pages/now/Homechart.css
@@ -35,7 +35,7 @@
     background:rgba(250, 250, 248, 0.05);
 }
 
-/* Add shadow only outside of the chart */
+/* shadow only outside of the chart */
 .chart::before {
   content: "";
   position: absolute;
