--- a/src/pages/settings/Service.css
+++ b/src/pages/settings/Service.css
@@ -1,4 +1,4 @@
-.wrapper3{
+/* .wrapper3{
     height: 79.3vh;
     background-color:#191970;
 }
@@ -11,12 +11,62 @@
 .wrapper5{
     height: 79.3vh;
     background-color:#191970;
-}
+} */
 
-.wrapper6{
-    height: 79.3vh;
-    background-color:#191970;
-}
+/*new*/
+.body{
+    overflow-y: auto; /* Allow the body to scroll vertically */
+  }
+  
+  .navnav,
+  .bottombar {
+    position: fixed;
+    width: 100%;
+    z-index: 1000; /* Ensure the Navbar and BottomNav appear on top of other elements */
+  }
+  
+  .tab {
+    position: fixed;
+    top: 90px; /* Adjust the top position based on the height of your Navbar */
+    width: 100%;
+    z-index: 1000; /* Ensure the tab appears on top of other elements */
+  }
+  
+  .tab-links {
+    background-color: #fff; /* Set the background color of the tab */
+    padding: 10px;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    top: 0;
+  }
+  
+  .tab-links li {
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #f0f0f0; /* Set the background color of the tab item */
+    transition: background-color 0.3s ease;
+  }
+  
+  .tab-links li:hover {
+    background-color: #e0e0e0; /* Set the background color of the tab item on hover */
+  }
+  
+  .tab-content {
+    margin-top: 40px; /* Adjust the top margin based on the height of your tab */
+  }
+  
+  .show-content {
+    display: block;
+  }
+  
+  .content {
+    display: none;
+  }
+  /*new*/
 
 .service{
     width: 330px;
@@ -25,7 +75,7 @@
     border-radius: 5px;
     background-color: rgb(186, 153, 217);
     color: black;
-    margin-top: 0px;
+    margin-top: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -41,18 +91,6 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.budget{
-    width: 330px;
-    padding: 15px;
-    height: min-content;
-    border-radius: 5px;
-    background-color: rgb(186, 153, 217);
-    color: black;
-    margin-top: 0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-
 .notification{
     width: 400px;
     padding: 15px;
@@ -60,7 +98,7 @@
     border-radius: 5px;
     background-color: rgb(186, 153, 217);
     color: black;
-    margin-top: 0px;
+    margin-top: 100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -126,12 +164,6 @@
 }
 
 @media screen and (max-width:1150px){
-    .wrapper3{
-        height: 79vh;
-    }
-    .wrapper4{
-        height: 79vh;
-    }
 
     .tab{
         width: 100%;
@@ -186,12 +218,7 @@
 }
 
 @media screen and (max-width:850px){
-    .wrapper3{
-        height: 82.2vh;
-    }
-    .wrapper4{
-        height: 82.2vh;
-    }
+    
 
     .tab{
         width: 100%;
@@ -246,19 +273,7 @@
 }
 
 @media screen and (max-width:650px){
-    .wrapper3{
-        height: 79.1vh;
-    }
-    .wrapper4{
-        height: 79.1vh;
-    }
-
-    .wrapper5{
-        height: 79.1vh;
-    }
-    .wrapper6{
-        height: 79.1vh;
-    }
+   
 
     .notification{
         width: 350px;
@@ -324,19 +339,7 @@
 }
 
 @media screen and (max-width:450px){
-    .wrapper3{
-        height: 86vh;
-    }
-    .wrapper4{
-        height: 86vh;
-    }
-
-    .wrapper5{
-        height: 86vh;
-    }
-    .wrapper6{
-        height: 86vh;
-    }
+    
     .connection{
         margin-top: 0px;
     }
@@ -403,4 +406,23 @@
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
     
+    .notification{
+        width: 400px;
+        padding: 15px;
+        height: min-content;
+        border-radius: 5px;
+        background-color: rgb(186, 153, 217);
+        color: black;
+        margin-top: 100px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .body{
+        height: 180vh;
+        margin-top: 0px;
+        padding-bottom: 500px;
+    }
+
+    .show-content .body{
+        height: 86vh;
+    }
 }
