--- a/src/components/bottommenu/BottomNav.css
+++ b/src/components/bottommenu/BottomNav.css
@@ -6,6 +6,8 @@
     /* background: rgb(186, 153, 217); */
     /* position: absolute; */
     height: 60px;
+    background: rgba(254, 255, 254, 0.9);;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .bottom-bar-links{
