--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -74,7 +74,7 @@
         margin-left: 0px;
         margin-top: 10px;
         height: 40px;
-        box-shadow: 0px 2px 5px -2px #333;
+        /* box-shadow: 0px 2px 5px -2px #333; */
         position: absolute;
     }
     
@@ -151,7 +151,7 @@
         margin-left: 0px;
         margin-top: 10px;
         height: 35px;
-        box-shadow: 0px 2px 5px -2px #333;
+        /* box-shadow: 0px 2px 5px -2px #333; */
     }
 
     .nav-bar-links{
@@ -192,7 +192,7 @@
         margin-left: 0px;
         margin-top: 10px;
         height: 35px;
-        box-shadow: 0px 2px 5px -2px #333;
+        /* box-shadow: 0px 2px 5px -2px #333; */
     }
 
     .nav-bar-links{
