--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,6 +5,13 @@
     align-items: center;
     /* background:  rgb(186, 153, 217); */
     padding: 1rem 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: rgba(254, 255, 254, 0.6);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* .title{
@@ -12,6 +19,45 @@
     justify-content: flex-start;
     align-items: center;
     
+} */
+.menu-trigger {
+    display: flex;
+    position: relative;
+}
+
+.drop {
+    position: absolute;
+    align-items: center;
+    top: 100%;
+    width: fit-content;
+    margin-top: 2px;
+    left: 0;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 0rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.drop ul{
+    margin-top: 5px;
+    margin: 1rem 0rem;
+   
+}
+
+.drop li{
+    list-style: none;
+    align-items: center;
+    justify-content: flex-start ;
+    margin-left: -30px;
+    font-size: 15px;
+    padding: 3px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* .menu-trigger:hover .drop {
+    display: flex;
 } */
 
 
@@ -44,6 +90,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 80px;
 }
 
 .app__navbar-login a{
@@ -59,13 +106,17 @@
     border-bottom: 1px solid rgb(211, 225, 3);
 }
 
-.app__navbar-login div{
+/* .app__navbar-login div{
     width: 1px;
     height: 30px;
     background-color: rgb(211, 225, 3);
-}
+} */
 
 .app__navbar-smallscreen{
+    display: none;
+}
+
+.small{
     display: none;
 }
 
@@ -73,6 +124,8 @@
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100vh;
     background:  rgb(186, 153, 217);
@@ -134,11 +187,27 @@
 
     .app__navbar-smallscreen{
         display: flex;
+    } 
+
+    .small{
+        display: flex;
+    }
+    
+    .bell{
+        margin-left: -80px;
+        margin-top: 1px;
+        position: absolute;
     }
 
     .app__navbar-smallscreen .hammenu{
         margin-left: -40px;
+        /* position: absolute; */
     }
+
+    .app__navbar-smallscreen a{
+        margin-left: -0px;
+    }
+
 }
 
 @media screen and (max-width:650px) {
@@ -149,6 +218,7 @@
     .app__navbar-smallscreen .hammenu{
         margin-left: -40px;
     }
+    
 }
 
 @media screen and (max-width:450px) {
