--- a/src/pages/custom/Custom.css
+++ b/src/pages/custom/Custom.css
@@ -2,10 +2,10 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    /* padding-left: 270px; */
     background-color:#05052a;
     height: 79.3vh;
     margin: 0%;
+    display: flex;
 }
 
 .chart-pick-kw{
@@ -16,8 +16,8 @@
     justify-content: flex-end;
     align-items: center;
     margin: 0%;
-    flex-direction: column;
-    padding: 1rem;
+    /* flex-direction: column; */
+    padding: 5rem;
 }
 
 .chart-pick-cost{
@@ -28,8 +28,8 @@
     justify-content: flex-end;
     align-items: center;
     margin: 0%;
-    flex-direction: column;
-    padding: 1rem;
+    /* flex-direction: column; */
+    padding: 5rem;
 }
 
 .date{
@@ -82,13 +82,26 @@
     }
 
     .chart-pick-kw{
+        flex: 1;
         width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
         padding: 1rem;
-        /* margin-left: -70px; */
     }
 
     .chart-pick-cost{
+        flex: 1;
         width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
         padding: 1rem;
     }
 }
@@ -107,27 +120,27 @@
 
     .chart-pick-kw{
         flex: 1;
-        width: 60%;
+        width: 65%;
         display: flex;
         /* position: absolute; */
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
         flex-direction: column;
-        padding: 1rem;
-        margin-top: 80px;
+        padding: 2rem;
+        margin-top: 50px;
 }
 
     .chart-pick-cost{
         flex: 1;
-        width: 60%;
+        width: 65%;
         display: flex;
         /* position: absolute; */
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
         flex-direction: column;
-        padding: 1rem;
+        padding: 2rem;
 }
 
 .date{
@@ -135,7 +148,7 @@
     justify-content: center;
     display: flex;
     width: 50%;
-    margin-top: -430px;
+    margin-top: -440px;
     position: absolute;
 }
 }
@@ -158,9 +171,7 @@
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
-        margin-left: 0px;
         padding: 0rem;
-        margin-top: 60px;
 }
 
     .chart-pick-cost{
@@ -171,8 +182,6 @@
         align-items: center;
         margin: 0%;
         padding: 0rem;
-        margin-left: 0px;
-        margin-top: -10px;
 }
 
     .date{
@@ -196,16 +205,18 @@
         margin-top: 0px;
         margin-left: 0px;
         margin-bottom: 0px;
+        flex-direction: column;
     }
 
     .chart-pick-kw{
         flex: 1;
         width: 390px;
         display: flex;
+        margin-top: 30px;
         justify-content: center;
         align-items: center;
         margin: 0%;
-        margin-left: -5px;
+        flex-direction: column;
         padding: 1rem;
 }
 
@@ -216,10 +227,8 @@
         justify-content:center;
         align-items: center;
         margin: 0%;
-        margin-left: -5px;
         flex-direction: column;
         padding: 1rem;
-        margin-top: -150px;
     }
 
     .date{
@@ -227,7 +236,7 @@
         justify-content: center;
         display: flex;
         width: 80%;
-        margin-top: -550px;
+        margin-top: -570px;
         margin-left: 0px;
         position: absolute;
     }
