--- a/src/pages/now/Homechart.css
+++ b/src/pages/now/Homechart.css
@@ -1,7 +1,8 @@
 .chart {
   position: relative;
   border-radius: 3%;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  background: rgba(11, 11, 11, 0.7);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
   padding: 10px;
   /* background-color: rgb(38, 37, 37); */
   /* opacity: 50%; */
@@ -10,12 +11,14 @@
 
 .icon{
     position: absolute;
-    margin-top: 105px;
+    margin-top: 85px;
     margin-left: 127px;
     align-items: center;
     justify-content: center;
     display: flex;
+    color: rgb(0, 0, 0);
 }
+
 /* .cc{
   background-color: yellow;
 } */
@@ -32,7 +35,8 @@
     margin: 0px;
     width: 300px;
     height: 100px;
-    background:rgba(250, 250, 248, 0.05);
+    background:  rgba(11, 11, 11, 0.5);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* shadow only outside of the chart */
@@ -61,3 +65,15 @@
 /* .c1{
   width: 360px;
 } */
+
+@media only screen and (max-width: 450px) {
+  .icon {
+    position: static;
+    transform: none;
+    margin-bottom: -130px; /* Adjust the bottom margin based on your design */
+  }
+
+  .chart {
+    margin-top: 0;
+  }
+}
