--- a/src/pages/year/Year.css
+++ b/src/pages/year/Year.css
@@ -2,10 +2,10 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    /* padding-left: 270px; */
+    background-color:#05052a;
     height: 79.3vh;
     margin: 0%;
-    background-color:#05052a;
+    display: flex;
 }
 
 .chart-year-kw{
@@ -16,7 +16,7 @@
     justify-content: flex-end;
     align-items: center;
     margin: 0%;
-    flex-direction: column;
+    /* flex-direction: column; */
     padding: 5rem;
 }
 
@@ -28,18 +28,18 @@
     justify-content: flex-end;
     align-items: center;
     margin: 0%;
-    flex-direction: column;
+    /* flex-direction: column; */
     padding: 5rem;
 }
 
 @media screen and (max-width:2000px){
     .page-4{
         width: 100%;
-        margin-top: 0%;
+        margin-top: 0rem;
         justify-content:center;
         align-items: center;
         display: flex;
-        margin-bottom: 0%;
+        margin-bottom: 0rem;
         padding: 1rem;
         /* margin-left: -150px; */
     }
@@ -62,7 +62,7 @@
         justify-content: center;
         height: 79vh;
         margin: 0rem;
-        margin-top: 0px;
+        margin-top: 00px;
         margin-bottom: 0rem;
         /* padding: 50px; */
     }
@@ -137,19 +137,17 @@
         align-items: center;
         justify-content: center;
         height: 79.1vh;
-        margin: 0rem;
-        /* margin-top: -10px;
+        margin: 0%;
+        /* margin-top: 10px;
         margin-left: 0px; */
     }
     .chart-year-kw{
         flex: 1;
         width: 100%;
         display: flex;
-
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
-
         padding: 0rem;
 }
 
@@ -157,11 +155,9 @@
         flex: 1;
         width: 100%;
         display: flex;
-        /* position: absolute; */
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
-        flex-direction: column;
         padding: 0rem;
 }
 }
@@ -172,23 +168,24 @@
         align-items: center;
         justify-content: center;
         height: 86vh;
-        margin: 1rem;
+        margin: 0rem;
         margin-top: 0px;
         margin-left: 0px;
         margin-bottom: 0px;
+        flex-direction: column;
     }
 
     .chart-year-kw{
         flex: 1;
         width: 390px;
         display: flex;
-
+        margin-top: 30px;
         justify-content: center;
         align-items: center;
         margin: 0%;
-
+        flex-direction: column;
         padding: 1rem;
-}
+    }
 
     .chart-year-cost{
         flex: 1;
@@ -199,5 +196,5 @@
         margin: 0%;
         flex-direction: column;
         padding: 1rem;
-}
+    }
 }
