--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -6,14 +6,17 @@
     /* background-color: #F5F5DC; */
     /* border-radius: 50px; */
     margin-left: 0px;
-    margin-top: 10px;
+    margin-top: 11px;
     /* height: 40px; */
     /* box-shadow: 0px 2px 5px -2px #333; */
     position: absolute;
+    z-index: 500;
 }
 
+
+
 .back{
-    background-color: white;
+    background-color: rgb(255, 255, 255,0.3);
     box-shadow: 0px 2px 5px -2px #333;
     height: 40px;
     border-radius: 50px;
@@ -47,6 +50,7 @@
     margin: 0.5px 5px;
     text-decoration: none;
     color: #191970;
+
     box-shadow: 0px 2px 5px -2px #333;
     /* text-shadow: 0px -1px #333; */
     border-radius: 50px;
@@ -220,5 +224,7 @@
     }
 
 
-    
+    .navnav1{
+        margin-top: -10px;
+    }
 }
