--- a/src/pages/month/Month.css
+++ b/src/pages/month/Month.css
@@ -2,7 +2,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color:#05052a;
+    /* background-color:#05052a; */
     height: 79.3vh;
     margin: 0%;
     display: flex;
