--- a/src/pages/now/Homechart.css
+++ b/src/pages/now/Homechart.css
@@ -39,6 +39,16 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
+#box2 {
+  /* border: solid rgb(180, 246, 72) 1px; */
+  margin: 0px;
+  width: 510px;
+  height: 200px;
+  border-radius: 3%;
+  background:  rgba(11, 11, 11, 0.5);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
 /* shadow only outside of the chart */
 .chart::before {
   content: "";
@@ -65,6 +75,18 @@
 /* .c1{
   width: 360px;
 } */
+
+@media only screen and (max-width: 650px) {
+  .icon {
+    position: static;
+    transform: none;
+    margin-bottom: -130px; /* Adjust the bottom margin based on your design */
+  }
+
+  .chart {
+    margin-top: 0;
+  }
+}
 
 @media only screen and (max-width: 450px) {
   .icon {
