--- a/src/pages/now/Home.css
+++ b/src/pages/now/Home.css
@@ -51,9 +51,37 @@
     height: 100vh;
 }
 
+.chart-kw{
+    flex: 1;
+    width: 100%;
+    display: flex;
+    /* position: absolute; */
+    justify-content:center;
+    align-items: center;
+    margin: 0%;
+    flex-direction: column;
+    padding: 0rem;
+    margin-top: 0px;
+    margin-left: 100px;
+}
+
+.chart-area{
+    flex: 1;
+    width: 100%;
+    display: flex;
+    /* position: absolute; */
+    justify-content:center;
+    align-items: center;
+    margin: 0%;
+    flex-direction: column;
+    padding: 0rem;
+    margin-top: 20px;
+    margin-right: 30px;
+}
+
 .chart-now-kw{
     flex: 1;
-    width: 40%;
+    width: 30%;
     display: flex;
     /* position: absolute; */
     justify-content:center;
@@ -66,7 +94,7 @@
 
 .chart-now-cost{
     flex: 1;
-    width: 40%;
+    width: 30%;
     display: flex;
     /* position: absolute; */
     justify-content: center;
@@ -169,29 +197,23 @@
         align-items: center;
         display: flex;
         margin-bottom: -4rem;
+        margin-left: -80px;
     }
-    
 
     .chart-now-kw{
-        height: 350px;
-        padding: 2rem;
+        height: 300px;
+        padding: 1rem;
         margin-top: 40px;
-        margin-left: 280px;
+        margin-left: 0px;
     }
 
     .chart-now-cost{
-        height: 350px;
-        padding: 2rem;
-        margin-top: 40px;
-        margin-right: 280px;
-    }
-
-    .chart-area{
         height: 300px;
-        padding: 2rem;
-        margin-top: -30px;
-        margin-right: 0px;
+        padding: 1rem;
+        margin-top: 40px;
+        margin-right: 50px;
     }
+    
     .navnav1{
         top: 93px;
     }
@@ -360,12 +382,40 @@
         justify-content: space-between;
         margin: 0%;
         margin-left: 0px;
-        height: 84vh;
+        height: 134vh;
+    }
+
+    .chart-kw{
+        flex: 1;
+        width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 50px;
+        margin-left: 0px;
+    }
+    
+    .chart-area{
+        flex: 1;
+        width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: -25px;
+        margin-left: -400px;
     }
 
     .chart-now-cost{
         width: 10px;
-        margin-top:20px;
+        margin-top:15px;
         align-items: center;
         justify-content: center;
         margin-bottom: 50px;
@@ -373,7 +423,7 @@
     }
 
     .chart-now-kw{
-        margin-top: 70px;
+        margin-top: 15px;
         width: 10px;
         align-items: center;
         justify-content: center;
@@ -386,7 +436,7 @@
         justify-content: center;
         align-items: center;
         margin: 0%;
-        margin-top: 10px;
+        margin-top: 100px;
         /* flex-direction: column; */
         
     }
@@ -420,7 +470,7 @@
         width: 100%;
         z-index: 1;
         border-collapse: collapse;
-        margin-top: 10px; 
+        margin-top: 20px; 
         width: 100%;
         overflow-x: auto;
         padding-top: 30px;
