--- a/src/pages/now/Homechart.css
+++ b/src/pages/now/Homechart.css
@@ -9,6 +9,31 @@
   /* z-index: 1; */
 }
 
+.text1{
+    margin-top: 10px;
+    width: 150px;
+    height: 80px;
+    color: #00ff99;
+    align-items: center;
+    border-radius: 5px;
+    justify-content: center;
+    background:  rgba(11, 11, 11, 0.5);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.text2{
+  margin-top: 10px;
+  width: 150px;
+  height: 80px;
+  color: #ff0066;
+  align-items: center;
+  border-radius: 5px;
+  justify-content: center;
+  background:  rgba(11, 11, 11, 0.5);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+
 .icon{
     position: absolute;
     margin-top: 85px;
@@ -42,8 +67,8 @@
 #box2 {
   /* border: solid rgb(180, 246, 72) 1px; */
   margin: 0px;
-  width: 510px;
-  height: 200px;
+  width: 440px;
+  height: 150px;
   border-radius: 3%;
   background:  rgba(11, 11, 11, 0.5);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
@@ -94,6 +119,34 @@
     transform: none;
     margin-bottom: -130px; /* Adjust the bottom margin based on your design */
   }
+
+  .text1{
+    margin-top: 10px;
+    width: 300px;
+    height: 80px;
+    color: #00ff99;
+    align-items: center;
+    border-radius: 5px;
+    justify-content: center;
+    background:  rgba(11, 11, 11, 0.5);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.text1 p h2{
+  margin-top: 10px;
+}
+
+.text2{
+  margin-top: 10px;
+  width: 300px;
+  height: 80px;
+  color: #ff0066;
+  align-items: center;
+  border-radius: 5px;
+  justify-content: center;
+  background:  rgba(11, 11, 11, 0.5);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
 
   .chart {
     margin-top: 0;
