--- a/src/pages/now/Home.css
+++ b/src/pages/now/Home.css
@@ -41,6 +41,7 @@
 
 .page-bottom {
   flex-wrap: wrap;
+  display: flex;
 }
 
 .home{
@@ -60,9 +61,9 @@
     align-items: center;
     margin: 0%;
     flex-direction: column;
-    padding: 0rem;
-    margin-top: 0px;
-    margin-left: 100px;
+    padding: 1rem;
+    margin-top: -132px;
+    margin-left: 200px;
 }
 
 .chart-area{
@@ -75,8 +76,8 @@
     margin: 0%;
     flex-direction: column;
     padding: 0rem;
-    margin-top: 20px;
-    margin-right: 30px;
+    margin-top: -20px;
+    margin-right: 0px;
 }
 
 .chart-now-kw{
@@ -88,7 +89,7 @@
     align-items: center;
     margin: 0%;
     flex-direction: column;
-    padding: 0rem;
+    padding: 1rem;
     margin-top: 0px;
 }
 
@@ -101,7 +102,7 @@
     align-items: center;
     margin: 0%;
     flex-direction: column;
-    padding: 0rem;
+    padding: 1rem;
     margin-top: 0px;
 }
 
@@ -132,7 +133,7 @@
 } */
 
 .page-bottom div{
-    width: 200px;
+    width: 210px;
     padding: 2rem;
     /* margin-top: -50px; */
 }
@@ -192,108 +193,268 @@
 @media screen and (max-width:2000px){
     .page{
         width: 100%;
-        margin-top: 0rem;
+        margin-top: -2rem;
         justify-content:center;
         align-items: center;
         display: flex;
         margin-bottom: -4rem;
-        margin-left: -80px;
+        margin-left: 0px;
+        overflow-y: auto;
+    }
+
+    .body2{
+        padding-top: 10px;
+        padding-bottom: 60px; 
+        overflow-y: auto; 
+        height: calc(98.1vh - 80px - 60px); 
     }
 
     .chart-now-kw{
         height: 300px;
         padding: 1rem;
-        margin-top: 40px;
+        margin-top: 0px;
         margin-left: 0px;
     }
 
     .chart-now-cost{
         height: 300px;
         padding: 1rem;
-        margin-top: 40px;
-        margin-right: 50px;
+        margin-top: 0px;
+        margin-right: 200px;
     }
     
     .navnav1{
         top: 93px;
     }
 
+    .chart-area{
+        flex: 1;
+        width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 20px;
+        margin-right: 0px;
+    }
+
+    .page-bottom{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: -10px;
+        /* background-color:#05052a; */
+        /* background-color:#020239; */
+        /* position: absolute; */
+        margin: 0%;
+        /* height: 10vh; */
+    }
     
 }
 
 @media screen and (max-width:1150px){
     .page{
         width: 100%;
+        margin-top: 0rem;
+        justify-content:center;
         align-items: center;
-        justify-content: center;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        height: 51.8vh;
+        display: flex;
+        margin-bottom: -4rem;
+        margin-left: 0px;
+        /* overflow-y: auto; */
     }
-    .chart-now-kw{
-        height: 350px;
+
+    .body2{
+        padding-top: 10px;
+        padding-bottom: 60px; 
+        overflow-y: auto; 
+        height: calc(10.1vh - 80px - 60px); 
+    }
+
+    .chart-kw{
+        flex: 1;
+        width:100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
         padding: 0rem;
-        margin-top: 40px;
+        margin-top: 0px;
+        margin-left: 10px;
+    }
+    
+    .chart-area{
+        flex: 1;
+        width: 300px;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 15px;
+        margin-left: 400px;
+    }
+
+    .chart-now-kw{
+        height: 300px;
+        padding: 0rem;
+        margin-top: -25px;
         margin-left: 0px;
     }
 
     .chart-now-cost{
-        height: 350px;
+        height: 300px;
         padding: 0rem;
-        margin-top: 40px;
+        margin-top: -25px;
         margin-right: 0px;
     }
 
-    .bottom-3{
-        width: 20px;
-        margin: 0%;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-}
-}
-
-@media screen and (max-width:850px){
-    .page{
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        height: 57.9vh;
-    }
-    .chart-now-kw{
-        width:30%; 
-        align-items: center;
-        justify-content: center;
-        padding: 0px;
-       margin-left: 0px;
-    }
-    .chart-now-cost{
-        width: 30%;
-        align-items: center;
-        justify-content: center;
-        padding: 0px;
-        margin-right: 0px;
-    }
-
-    .navnav1{
-        top: 93px;
-    }
     .page-bottom{
         display: flex;
         width: 100%;
         justify-content: center;
         align-items: center;
         margin: 0%;
-        margin-top: 0px;
+        margin-top: 30px;
+        flex-direction: column;
+        
     }
     
     .page-bottom div{
-        width: 140px;
-        padding: 0px;
-        margin-bottom: 15px;
-        padding: 5px;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 1px;
+    }
+
+    .page-bottom .vol{
+        width: 200px;
+        flex: 1;
+    }
+
+    .page-bottom .pow{
+        width: 200px;
+        flex: 1;
+    }
+
+    .body2{
+        width: 100%;
+        z-index: 1;
+        border-collapse: collapse;
+        margin-top: 10px; 
+        width: 100%;
+        overflow-x: auto;
+        padding-top: 30px;
+        padding-bottom: 60px; 
+        overflow-y: auto; 
+        height: calc(96.81vh - 80px - 60px); 
+    }
+}
+
+@media screen and (max-width:850px){
+    .page{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0%;
+        margin-left: 0px;
+        height: 115.5vh;
+    }
+
+    .chart-kw{
+        flex: 1;
+        width:100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 30px;
+        margin-left: 0px;
+    }
+    
+    .chart-area{
+        flex: 1;
+        width: 300px;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 15px;
+        margin-left: 230px;
+    }
+
+    .chart-now-cost{
+        width: 400px;
+        margin-top: 0px;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 0px;
+        margin-right: 0px;
+        margin-top: 15px;
+    }
+
+    .chart-now-kw{
+        margin-top: 15px;
+        width: 400px;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0px;
+    }
+
+    .page-bottom{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin: 0%;
+        margin-top: 20px;
+        flex-direction: column;
+        
+    }
+    
+    .page-bottom div{
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 1px;
+    }
+
+    .page-bottom .vol{
+        width: 200px;
+        flex: 1;
+    }
+
+    .page-bottom .pow{
+        width: 200px;
+        flex: 1;
+    }
+
+    .body2{
+        width: 100%;
+        z-index: 1;
+        border-collapse: collapse;
+        margin-top: 10px; 
+        width: 100%;
+        overflow-x: auto;
+        padding-top: 30px;
+        padding-bottom: 60px; 
+        overflow-y: auto; 
+        height: calc(96.81vh - 80px - 60px); 
     }
 
 }
@@ -308,21 +469,50 @@
         justify-content: space-between;
         margin: 0%;
         margin-left: 0px;
-        height: 100.5vh;
+        height: 118vh;
+    }
+
+    .chart-kw{
+        flex: 1;
+        width:100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    
+    .chart-area{
+        flex: 1;
+        width: 300px;
+        display: flex;
+        /* position: absolute; */
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+        margin-top: 15px;
+        margin-left: 50px;
     }
 
     .chart-now-cost{
-        width: 400px;
+        width: 300px;
         margin-top: 0px;
         align-items: center;
         justify-content: center;
         margin-bottom: 0px;
         margin-right: 0px;
+        margin-top: 15px;
     }
 
     .chart-now-kw{
         margin-top: 0px;
-        width: 400px;
+        width: 300px;
         align-items: center;
         justify-content: center;
         margin-left: 0px;
@@ -336,6 +526,7 @@
         margin: 0%;
         margin-top: 0px;
         flex-direction: column;
+        margin-left: 0px;
         
     }
     
@@ -382,7 +573,7 @@
         justify-content: space-between;
         margin: 0%;
         margin-left: 0px;
-        height: 134vh;
+        height: 120vh;
     }
 
     .chart-kw{
@@ -395,13 +586,13 @@
         margin: 0%;
         flex-direction: column;
         padding: 0rem;
-        margin-top: 50px;
+        margin-top: -100px;
         margin-left: 0px;
     }
     
     .chart-area{
         flex: 1;
-        width: 100%;
+        width: 300px;
         display: flex;
         /* position: absolute; */
         justify-content:center;
@@ -409,13 +600,13 @@
         margin: 0%;
         flex-direction: column;
         padding: 0rem;
-        margin-top: -25px;
-        margin-left: -400px;
+        margin-top: -120px;
+        margin-left: -140px;
     }
 
     .chart-now-cost{
         width: 10px;
-        margin-top:15px;
+        margin-top:-150px;
         align-items: center;
         justify-content: center;
         margin-bottom: 50px;
@@ -423,7 +614,7 @@
     }
 
     .chart-now-kw{
-        margin-top: 15px;
+        margin-top: -200px;
         width: 10px;
         align-items: center;
         justify-content: center;
@@ -436,15 +627,15 @@
         justify-content: center;
         align-items: center;
         margin: 0%;
-        margin-top: 100px;
+        margin-top: 10px;
         /* flex-direction: column; */
-        
+        margin-bottom: -50px;
     }
     
     .page-bottom div{
         width: 100%;
         margin-top: 0px;
-        margin-bottom: 7px;
+        margin-bottom: 10px;
         padding: 1px;
         flex: 1;
         justify-content: space-between;
@@ -452,19 +643,15 @@
     }
 
     .page-bottom .vol{
-        width: 180px;
+        width: 170px;
         flex: 1;
         
     }
 
     .page-bottom .pow{
-        width: 180px;
+        width: 170px;
         flex: 1;
     }
-      .page-bottom {
-        margin-top: -5px;
-      }
-
 
       .body2{
         width: 100%;
