--- a/src/pages/settings/Budget.css
+++ b/src/pages/settings/Budget.css
@@ -13,12 +13,9 @@
 }
 
 
-  .bodyb {
-    padding-top: 10px;
-    padding-bottom: 10px; 
-    overflow-y: auto; 
-    height: calc(100vh - 90px - 200px); 
-  }
+  /* .bodyb {
+    margin-top: 20px;
+  } */
   
 
   .navnav {
@@ -65,6 +62,22 @@
     position: fixed;
     z-index: 5;
   }
+
+  @media screen and (max-width:2000px){
+
+    .bodyb {
+      margin-top: 100px;
+      width: 400px;
+    }
+  }
+
+
+  @media screen and (max-width:850px){
+    .bodyb {
+      margin-top: 270px;
+      width: 400px;
+    }
+  }
   
  
   @media (max-width: 768px) {
@@ -90,4 +103,12 @@
       box-sizing: border-box;
       display: block;
     }
+  }
+
+  @media screen and (max-width:450px){
+
+    /* .bodyb {
+      margin-top: 200px;
+      width: 400px;
+    } */
   }
