--- a/src/pages/userlist/Userlist.css
+++ b/src/pages/userlist/Userlist.css
@@ -8,7 +8,7 @@
     padding-top: 30px;
     padding-bottom: 60px; 
     overflow-y: auto; 
-    height: calc(98.1vh - 80px - 60px); 
+    height: calc(100vh - 80px - 73.5px); 
   }
   
 
@@ -24,19 +24,20 @@
 
 .body h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
+    color: black;
 }
 
 .bbttnn{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
   
-  .table1 {
+.table1 {
     width: 100%;
     overflow-x: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-  
+}
+
+
   .table {
     width: 100%;
     border-collapse: collapse;
@@ -80,5 +81,14 @@
       width: 100%;
       box-sizing: border-box;
       display: block;
+    }
+  }
+
+  @media screen and (max-width:450px){
+    .body {
+      padding-top: 30px;
+      padding-bottom: 60px; 
+      overflow-y: auto; 
+      height: calc(102.55vh - 80px - 60px); 
     }
   }
