--- a/src/pages/custom/Custom.css
+++ b/src/pages/custom/Custom.css
@@ -112,46 +112,46 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 79vh;
-        margin: 0rem;
+        height: 80vh;
+        margin: 1rem;
         margin-top: 0px;
-        display: flex;
+        margin-left: 0px;
+        margin-bottom: 0px;
         flex-direction: column;
     }
 
     .chart-pick-kw{
         flex: 1;
-        width: 65%;
+        width: 450px;
         display: flex;
-        /* position: absolute; */
-        justify-content: flex-end;
+        margin-top: 30px;
+        justify-content: center;
         align-items: center;
         margin: 0%;
         flex-direction: column;
         padding: 1rem;
-        margin-top: 80px;
 }
 
     .chart-pick-cost{
         flex: 1;
-        width: 65%;
+        width: 450px;
         display: flex;
-        /* position: absolute; */
-        justify-content: flex-end;
+        justify-content:center;
         align-items: center;
         margin: 0%;
         flex-direction: column;
         padding: 1rem;
-}
+    }
 
-.date{
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    width: 50%;
-    margin-top: -440px;
-    position: absolute;
-}
+    .date{
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        width: 80%;
+        margin-top: 80px;
+        position: static;
+        transform: none;
+    }
 }
 
 @media screen and (max-width:650px) {
