--- a/src/pages/now/Homechart.css
+++ b/src/pages/now/Homechart.css
@@ -76,8 +76,7 @@
 #box2 {
   /* border: solid rgb(180, 246, 72) 1px; */
   margin: 0px;
-  width: 380px;
-  height: 150px;
+  padding: 2px;
   border-radius: 3%;
   background:  rgba(11, 11, 11, 0.5);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
