--- a/src/pages/year/Year.css
+++ b/src/pages/year/Year.css
@@ -106,27 +106,28 @@
 
     .chart-year-kw{
         flex: 1;
-        width: 65%;
+        width: 450px;
         display: flex;
         /* position: absolute; */
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
         flex-direction: column;
-        padding: 1rem;
+        padding: 0rem;
         margin-top: 50px;
+        margin-bottom: 15px;
 }
 
     .chart-year-cost{
         flex: 1;
-        width: 65%;
+        width: 450px;
         display: flex;
         /* position: absolute; */
         justify-content: flex-end;
         align-items: center;
         margin: 0%;
         flex-direction: column;
-        padding: 1rem;
+        padding: 0rem;
 }
 }
 
